--- a/sass/blocks/comments.scss
+++ b/sass/blocks/comments.scss
@@ -1,4 +1,5 @@
 .comments {
+  position: relative;
   margin-bottom: 88px;
   padding-left: 30px;
   padding-right: 30px;
@@ -84,6 +85,13 @@
   }
 }
 
+.comments__icon {
+  position: absolute;
+  width: 320px;
+  left: 0;
+  bottom: -59px;
+}
+
 @media (min-width: $tablet-width) {
   .comments {
     width: 668px;
@@ -98,6 +106,11 @@
     background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
     margin-bottom: 72px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/review@2x.jpg");
+      background-size: 350px auto;
+    }
   }
 
   .comments__title {
@@ -144,6 +157,11 @@
     order: 2;
     margin-left: auto;
   }
+
+  .comments__icon {
+    width: 768px;
+    bottom: -12px;
+  }
 }
 
 @media (min-width: $desktop-width) {
@@ -152,6 +170,11 @@
     background-image: url("../img/review@1x.jpg");
     background-position: 6% 8px;
     padding-top: 83px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/review@2x.jpg");
+      background-size: 350px auto;
+    }
   }
 
   .comments__transfer {
@@ -187,5 +210,10 @@
     width: 175px;
     order: 2;
     margin-left: auto;
+  }
+
+  .comments__icon {
+    width: 1150px;
+    bottom: -63px;
   }
 }
