--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -1,10 +1,16 @@
 .intro {
+  position: relative;
   background-color: $light-gray;
 
   &--changing-page {
     background-image: url("../img/hero-mobile@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% -20px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-mobile@2x.jpg");
+      background-size: 320px auto;
+    }
   }
 }
 
@@ -49,11 +55,20 @@
   margin: 0;
 }
 
+.intro__icon {
+  display: none;
+}
+
 @media (min-width: $tablet-width) {
   .intro--changing-page {
-    background-image: url("../img/hero-tablet.jpg");
+    background-image: url("../img/hero-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% -1px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-tablet@2x.jpg");
+      background-size: 768px auto;
+    }
   }
 
   .intro__title--index-page {
@@ -97,13 +112,25 @@
     line-height: 45px;
     letter-spacing: 1px;
   }
+
+  .intro__icon {
+    display: block;
+    position: absolute;
+    bottom: -18px;
+    width: 768px;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .intro--changing-page {
-    background-image: url("../img/hero-desktop.jpg");
-    background-repeat: no-repeat;
+    background-image: url("../img/hero-desktop@1x.jpg");
+    background-size: cover;
     background-position: 50% -1px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-desktop@2x.jpg");
+      background-size: 1150px auto;
+    }
   }
 
   .intro__title {
@@ -132,5 +159,11 @@
     line-height: 50px;
     padding-bottom: 100px;
     padding-top: 98px;
+  }
+
+  .intro__icon {
+    bottom: -18px;
+    width: 1150px;
+    left: -50px;
   }
 }
