--- a/sass/blocks/products.scss
+++ b/sass/blocks/products.scss
@@ -1,4 +1,5 @@
 .products {
+  position: relative;
   display: flex;
   flex-direction: column;
 }
@@ -18,7 +19,7 @@
   &:hover,
   &:focus {
     margin-top: -5px;
-    padding-bottom: 33px;
+    padding-bottom: 26px;
   }
 
   &:active .products__title {
@@ -51,12 +52,15 @@
   letter-spacing: 1px;
 }
 
+.products__icon--fill {
+  display: none;
+}
+
 @media (min-width: $tablet-width) {
   .products {
     flex-direction: row;
     padding-left: 50px;
     padding-right: 50px;
-    background: #f8f8f8;
   }
 
   .products__item {
@@ -69,6 +73,13 @@
     font-size: 20px;
     line-height: 25px;
     padding: 0;
+  }
+
+  .products__icon--fill {
+    position: absolute;
+    display: block;
+    top: 100px;
+    left: 0;
   }
 }
 
