--- a/sass/blocks/top-menu.scss
+++ b/sass/blocks/top-menu.scss
@@ -58,5 +58,8 @@
     flex-grow: 1;
     margin-right: 0;
     justify-content: center;
+    padding-top: 9px;
+    padding-right: 23px;
+    padding-bottom: 34px;
   }
 }
