--- a/sass/global/global.scss
+++ b/sass/global/global.scss
@@ -39,13 +39,13 @@ a {
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", "Arial", sans-serif;
   src: url("../fonts/opensans.woff2") format("woff2"), url("../fonts/opensans.woff") format("woff");
   font-weight: 400;
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", "Arial", sans-serif;
   src: url("../fonts/opensansbold.woff2") format("woff2"), url("../fonts/opensansbold.woff") format("woff");
   font-weight: 700;
 }
