--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -68,6 +68,21 @@
   margin: 0;
 }
 
+.contacts__map {
+  width: 100%;
+  height: 458px;
+  background: url("../img/icon-map-pin.svg"), url("../img/map-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-size: auto, cover;
+  background-position: 55% 42%, center;
+  margin-bottom: 45px;
+
+  @media (min-resolution: $retina-dpi),
+    (min-resolution: $retina-dppx) {
+    background-image: url("../img/icon-map-pin.svg"), url("../img/map-mobile@2x.jpg");
+  }
+}
+
 .contacts__map iframe {
   width: 100%;
   margin-bottom: 40px;
@@ -137,6 +152,17 @@
     margin-bottom: 57px;
   }
 
+  .contacts__map {
+    background: url("../img/icon-map-pin.svg"), url("../img/map-tablet@1x.jpg");
+    background-position: 52% 39%, center;
+    margin-bottom: 54px;
+
+    @media (min-resolution: $retina-dpi),
+      (min-resolution: $retina-dppx) {
+      background-image: url("../img/icon-map-pin.svg"), url("../img/map-tablet@2x.jpg");
+    }
+  }
+
   .contacts__map iframe {
     margin-bottom: 0;
   }
@@ -180,6 +206,14 @@
   .contacts__map {
     width: 525px;
     margin-top: 65px;
+    background: url("../img/icon-map-pin.svg"), url("../img/map-desktop@1x.jpg");
+    background-position: 52% 39%, center;
+    margin-bottom: 0;
+
+    @media (min-resolution: $retina-dpi),
+      (min-resolution: $retina-dppx) {
+      background-image: url("../img/icon-map-pin.svg"), url("../img/map-desktop@2x.jpg");
+    }
   }
 
   .contacts__button {
