--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -5,11 +5,12 @@
   &--changing-page {
     background-image: url("../img/hero-mobile@1x.jpg");
     background-repeat: no-repeat;
-    background-position: 50% -20px;
+    background-position: 50% -12px;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("../img/hero-mobile@2x.jpg");
-      background-size: 320px auto;
+      background-size: 600px 350px;
+      background-position: 50% -3px;
     }
   }
 }
@@ -67,7 +68,7 @@
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("../img/hero-tablet@2x.jpg");
-      background-size: 768px auto;
+      background-size: 1150px 744px;
     }
   }
 
