--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -70,7 +70,7 @@
 
 .contacts__map {
   width: 100%;
-  height: 458px;
+  height: 456px;
   background: url("../img/icon-map-pin.svg"), url("../img/map-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-size: auto, cover;
@@ -112,6 +112,18 @@
     line-height: 50px;
     margin-bottom: 35px;
     letter-spacing: 1px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -16px;
+      right: 3px;
+      display: block;
+      width: 47px;
+      height: 81px;
+      background-image: url("../img/flag.svg");
+      background-repeat: no-repeat;
+    }
   }
 
   .contacts__list {
@@ -156,6 +168,7 @@
     background: url("../img/icon-map-pin.svg"), url("../img/map-tablet@1x.jpg");
     background-position: 52% 39%, center;
     margin-bottom: 54px;
+    background-repeat: no-repeat;
 
     @media (min-resolution: $retina-dpi),
       (min-resolution: $retina-dppx) {
@@ -181,7 +194,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 1050px;
-    margin-bottom: 48px;
+    margin-bottom: 53px;
     padding-left: 50px;
     padding-right: 50px;
   }
@@ -209,6 +222,7 @@
     background: url("../img/icon-map-pin.svg"), url("../img/map-desktop@1x.jpg");
     background-position: 52% 39%, center;
     margin-bottom: 0;
+    background-repeat: no-repeat;
 
     @media (min-resolution: $retina-dpi),
       (min-resolution: $retina-dppx) {
@@ -229,6 +243,10 @@
     font-size: 54px;
     line-height: 46px;
     margin-bottom: 39px;
+
+    &::after {
+      right: 415px;
+    }
   }
 
   .contacts__icon {
