--- a/sass/blocks/order-form.scss
+++ b/sass/blocks/order-form.scss
@@ -1,18 +1,18 @@
 .order-form {
-  margin-bottom: 56px;
+  margin-bottom: 54px;
 }
 
 .order-form__fieldset {
   padding-left: 30px;
   padding-right: 30px;
-  margin-bottom: 11px;
+  margin-bottom: 13px;
 }
 
 .order-form__legend {
   position: relative;
   margin: 0;
   padding: 0;
-  margin-bottom: 23px;
+  margin-bottom: 30px;
   font-size: 17px;
   line-height: 16px;
   color: $light-green;
@@ -33,6 +33,8 @@
 }
 
 .order-form__legend--colors {
+  margin-bottom: 23px;
+
   &::before {
     content: "";
     position: absolute;
@@ -45,7 +47,7 @@
 }
 
 .order-form__legend--name {
-  margin-bottom: 18px;
+  margin-bottom: 11px;
 
   &::before {
     content: "";
@@ -59,7 +61,7 @@
 }
 
 .order-form__legend--tel {
-  margin-bottom: 7px;
+  margin-bottom: 8px;
 
   &::before {
     content: "";
@@ -73,7 +75,7 @@
 }
 
 .order-form__legend--email {
-  margin-bottom: 5px;
+  margin-bottom: 9px;
 
   &::before {
     content: "";
@@ -117,30 +119,13 @@
   line-height: 18px;
   color: $black;
   font-weight: 700;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 21px;
 
-  &--radio,
-  &--checkbox {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 21px;
-  }
-
-  &--radio:hover::before,
-  &--radio:focus::before,
-  &--checkbox:hover::before,
-  &--checkbox:focus::before {
-    border-color: $light-green;
-  }
-
-  &--radio:active::before,
-  &--checkbox:active::before {
-    border-color: $light-gray;
-  }
-
-  &--radio::before,
-  &--checkbox::before {
+  &--radio::before {
     content: "";
     display: block;
     width: 36px;
@@ -148,10 +133,49 @@
     margin-right: 20px;
     border: 2px solid $dark-gray;
     cursor: pointer;
+    margin-top: -5px;
+    border-radius: 50%;
   }
 
-  &--radio::before {
-    border-radius: 50%;
+  &--radio:hover::before,
+  &--radio:focus::before {
+    border-color: $light-green;
+  }
+
+  &--radio:active::before {
+    border-color: $light-gray;
+  }
+}
+
+.order-form__label--checkbox {
+  font-size: 17px;
+  line-height: 18px;
+  color: $black;
+  font-weight: 700;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 21px;
+
+
+  &:hover::before,
+  &:focus::before {
+    border-color: $light-green;
+  }
+
+  &:active::before {
+    border-color: $light-gray;
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    width: 36px;
+    height: 36px;
+    margin-right: 20px;
+    border: 2px solid $dark-gray;
+    cursor: pointer;
   }
 }
 
@@ -161,15 +185,17 @@
 }
 
 .order-form__label--name {
-  margin-top: 11px;
+  padding-top: 19px;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
 .order-form__item--name {
-  height: 91px;
+  min-height: 90px;
 }
 
 .order-form__fieldset--tel {
-  margin-bottom: 18px;
+  margin-bottom: 30px;
 }
 
 .order-form__input {
@@ -177,7 +203,7 @@
 }
 
 .order-form__fieldset--email {
-  margin-bottom: 20px;
+  margin-bottom: 33px;
 }
 
 .order-form__fieldset--additionally {
@@ -187,8 +213,8 @@
 .order-form__input:checked ~ .order-form__label--radio::after {
   content: "";
   position: absolute;
-  top: 11.5px;
-  left: 11.5px;
+  top: 8.5px;
+  left: 12.5px;
   width: 15px;
   height: 15px;
   background-color: $light-green;
@@ -211,8 +237,9 @@
 
 .order-form__text {
   width: 100%;
-  padding: 17px 0;
-  margin-bottom: 13px;
+  padding: 16px 0;
+  padding-bottom: 14px;
+  margin-bottom: 0;
   font-size: 17px;
   line-height: 18px;
   border: none;
@@ -220,11 +247,15 @@
   border-bottom: 2px solid $black;
 }
 
+.order-form__text--tel {
+  font-size: 15px;
+}
+
 .order-form__textarea {
   width: 222px;
   min-height: 106px;
-  margin-top: 22px;
-  margin-bottom: 17px;
+  margin-top: 24px;
+  margin-bottom: 16px;
   padding: 17px;
   font-size: 17px;
   line-height: 18px;
@@ -322,7 +353,7 @@
   }
 
   .order-form__legend--email {
-    margin-top: 20px;
+    margin-top: 10px;
   }
 
   .order-form__legend--additionally {
@@ -353,6 +384,10 @@
     margin-top: 5px;
   }
 
+  .order-form__transfer {
+    display: none;
+  }
+
   .order-form__icon--tel {
     top: 43px;
     right: 26px;
@@ -364,12 +399,18 @@
   }
 
   .order-form__item--name {
-    height: 60px;
+    min-height: 0;
     margin: 0;
   }
 
-  .order-form__item--tel,
   .order-form__item--email {
+    position: relative;
+    margin-top: 15px;
+    padding-top: 20px;
+    margin-bottom: 0;
+  }
+
+  .order-form__item--tel {
     position: relative;
     margin-top: 15px;
     margin-bottom: 0;
@@ -388,23 +429,24 @@
   }
 
   .order-form__item--checkbox {
-    width: 50%;
+    width: 195px;
     min-height: 52px;
-    margin-top: 17px;
-    margin-bottom: 7px;
+    margin-right: 68px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
   }
 
-  .order-form__label {
-    &--radio::before,
-    &--checkbox::before {
+  .order-form__label--checkbox {
+    &::before {
       content: "";
       display: block;
-      width: 45px;
-      height: 45px;
-      margin-right: 37px;
+      width: 50px;
+      height: 50px;
+      margin-right: 27px;
       border: 2px solid $dark-gray;
       cursor: pointer;
-      font-size: 19px;
     }
   }
 
@@ -413,18 +455,23 @@
     margin-bottom: 0;
   }
 
+  .order-form__label {
+    &--radio::before {
+      content: "";
+      display: block;
+      width: 45px;
+      height: 45px;
+      margin-right: 31px;
+      border: 2px solid $dark-gray;
+      cursor: pointer;
+      margin-top: 0;
+    }
+  }
+
   .order-form__label--radio {
     width: 100%;
     font-size: 18px;
     letter-spacing: 0.5px;
-  }
-
-  .order-form__label--checkbox {
-    margin-left: 10px;
-
-    &:nth-child(2n) {
-      margin-left: 0;
-    }
   }
 
   .order-form__input:checked ~ .order-form__label--radio::after {
@@ -435,27 +482,31 @@
   }
 
   .order-form__input:checked ~ .order-form__label--checkbox::after {
-    top: 16px;
-    left: 12px;
-    width: 29px;
-    height: 25px;
+    top: 18px;
+    left: 10px;
+    width: 32px;
+    height: 27px;
   }
 
   .order-form__text {
     margin: 0;
-    padding-left: 17px;
-    font-size: 18px;
-    letter-spacing: 1px;
+    padding-left: 18px;
+    padding-top: 0;
+    font-size: 19px;
+    letter-spacing: 0.2px;
   }
 
   .order-form__text--tel {
     padding-top: 45px;
+    font-size: 16px;
   }
 
   .order-form__label--name {
-    margin-right: 33px;
-    font-size: 20px;
+    margin-right: 30px;
+    font-size: 19px;
     margin-top: 0;
+    margin-bottom: 18px;
+    padding-top: 0;
   }
 
   .order-form__fieldset--type {
@@ -487,10 +538,41 @@
   .order-form__textarea {
     width: 100%;
     font-size: 20px;
+    margin-top: 19px;
   }
 
   .order-form__item--textarea {
     margin: 0;
+  }
+
+  .order-form__item--pink {
+    margin-top: 0;
+    letter-spacing: 1px;
+  }
+
+  .order-form__item--black {
+    margin-top: 0;
+    letter-spacing: 1px;
+  }
+
+  .order-form__item--aqua {
+    margin-top: 3px;
+    letter-spacing: 1.3px;
+  }
+
+  .order-form__item--white {
+    margin-top: 15px;
+    letter-spacing: 1px;
+  }
+
+  .order-form__item--gray {
+    margin-top: 15px;
+    letter-spacing: 0.7px;
+  }
+
+  .order-form__item--orange {
+    margin-top: 0;
+    letter-spacing: 1px;
   }
 
   .order-form__note {
@@ -508,7 +590,7 @@
 
 @media (min-width: $desktop-width) {
   .order-form {
-    margin-bottom: 50px;
+    margin-bottom: 48px;
   }
 
   .order-form__fieldset {
@@ -527,6 +609,12 @@
 
   .order-form__item--checkbox {
     width: 30%;
+    min-height: 52px;
+    margin-right: 0;
+  }
+
+  .order-form__item--aqua {
+    margin-top: 14px;
   }
 
   .order-form__item--name {
@@ -554,7 +642,6 @@
 
   .order-form__note {
     margin-right: 172px;
-    letter-spacing: 0.5px;
   }
 
   .order-form__button {
@@ -602,7 +689,7 @@
   }
 
   .order-form__legend--email {
-    padding-top: 20px;
+    padding-top: 0;
   }
 
   .order-form__legend--additionally {
