--- a/sass/blocks/sale-list.scss
+++ b/sass/blocks/sale-list.scss
@@ -31,7 +31,7 @@
 
   .sale-list__item--delivery {
     display: block;
-    margin-left: 110px;
+    margin-left: 103px;
   }
 
   .sale-list__link--delivery {
@@ -62,11 +62,11 @@
 
   .sale-list__item {
     display: block;
-    margin-right: 71px;
+    margin-right: 63px;
   }
 
   .sale-list__item--delivery {
-    margin-left: 443px;
+    margin-left: 438px;
     margin-right: 0;
   }
 
@@ -74,7 +74,8 @@
     line-height: 24px;
     color: #000000;
     font-weight: 700;
-    font-size: 15px;
+    font-size: 14px;
+    letter-spacing: 0.6px;
   }
 
   .sale-list__link--delivery {
