--- a/sass/blocks/social.scss
+++ b/sass/blocks/social.scss
@@ -43,3 +43,9 @@
     justify-content: center;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .social__item--twitter {
+    margin-right: 0;
+  }
+}
