--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -1,3 +1,7 @@
+.contacts {
+  margin-bottom: 40px;
+}
+
 .contacts__list {
   margin: 0;
   padding: 0;
@@ -7,13 +11,14 @@
 .contacts__wrap {
   padding-left: 30px;
   padding-right: 30px;
+  margin-bottom: 10px;
 }
 
 .contacts__title {
   position: relative;
   margin: 0;
   padding: 0;
-  font-size: 19px;
+  font-size: 17px;
   line-height: 30px;
   color: $black;
   font-weight: 700;
@@ -45,13 +50,13 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  padding-bottom: 30px;
+  padding-bottom: 28px;
   line-height: 30px;
 }
 
 .contacts__value {
   margin: 0;
-  font-size: 15.8px;
+  font-size: 15px;
 }
 
 .contacts__address {
@@ -70,12 +75,12 @@
 
 .contacts__map {
   width: 100%;
-  height: 458px;
+  height: 456px;
   background: url("../img/icon-map-pin.svg"), url("../img/map-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-size: auto, cover;
   background-position: 55% 42%, center;
-  margin-bottom: 45px;
+  margin-bottom: 38px;
 
   @media (min-resolution: $retina-dpi),
     (min-resolution: $retina-dppx) {
@@ -93,10 +98,6 @@
   padding-right: 30px;
 }
 
-.contacts__write-us {
-  margin-bottom: 40px;
-}
-
 .contacts__icon {
   display: none;
 }
@@ -105,13 +106,25 @@
   .contacts__wrap {
     padding-left: 50px;
     padding-right: 50px;
+    margin-bottom: 30px;
   }
 
   .contacts__title {
-    font-size: 44px;
+    font-size: 42px;
     line-height: 50px;
     margin-bottom: 35px;
-    letter-spacing: 1px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -15px;
+      right: 3px;
+      display: block;
+      width: 47px;
+      height: 81px;
+      background-image: url("../img/flag.svg");
+      background-repeat: no-repeat;
+    }
   }
 
   .contacts__list {
@@ -120,25 +133,25 @@
 
   .contacts__item {
     width: 50%;
-    margin-bottom: 24px;
   }
 
   .contacts__name {
     font-size: 17px;
     margin-top: 14px;
-  }
-
-  .contacts__link {
-    width: 195px;
-    font-size: 17px;
-    padding: 0;
-    margin-top: 14px;
+    margin-right: 27px;
   }
 
   .contacts__value {
     font-size: 17px;
     margin-top: 14px;
     margin-bottom: 0;
+  }
+
+  .contacts__link {
+    width: 205px;
+    font-size: 16.5px;
+    padding: 0;
+    margin-top: 14px;
   }
 
   .contacts__button {
@@ -156,6 +169,7 @@
     background: url("../img/icon-map-pin.svg"), url("../img/map-tablet@1x.jpg");
     background-position: 52% 39%, center;
     margin-bottom: 54px;
+    background-repeat: no-repeat;
 
     @media (min-resolution: $retina-dpi),
       (min-resolution: $retina-dppx) {
@@ -181,7 +195,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 1050px;
-    margin-bottom: 48px;
+    margin-bottom: 47px;
     padding-left: 50px;
     padding-right: 50px;
   }
@@ -209,11 +223,16 @@
     background: url("../img/icon-map-pin.svg"), url("../img/map-desktop@1x.jpg");
     background-position: 52% 39%, center;
     margin-bottom: 0;
+    background-repeat: no-repeat;
 
     @media (min-resolution: $retina-dpi),
       (min-resolution: $retina-dppx) {
       background-image: url("../img/icon-map-pin.svg"), url("../img/map-desktop@2x.jpg");
     }
+  }
+
+  .contacts__link {
+    width: 200px;
   }
 
   .contacts__button {
@@ -222,13 +241,18 @@
   }
 
   .contacts__write-us {
-    margin-top: -60px;
+    margin-top: -51px;
+    width: 228px;
   }
 
   .contacts__title {
-    font-size: 54px;
-    line-height: 46px;
+    font-size: 50px;
+    line-height: 48px;
     margin-bottom: 39px;
+
+    &::after {
+      right: 415px;
+    }
   }
 
   .contacts__icon {
