--- a/sass/blocks/user-list.scss
+++ b/sass/blocks/user-list.scss
@@ -57,7 +57,9 @@
 
   .user-list__link {
     margin: 0;
-    padding-left: 58px;
+    padding-left: 54px;
+    letter-spacing: 0.3px;
+    font-size: 16px;
   }
 
   .user-list__icon {
@@ -74,7 +76,7 @@
   }
 
   .user-list__item--basket {
-    width: 265px;
+    width: 275px;
     padding-left: 30px;
     padding-right: 0;
   }
