--- a/sass/global/global.scss
+++ b/sass/global/global.scss
@@ -6,7 +6,7 @@ body {
   font-style: normal;
   font-weight: 400;
   color: $dark-gray;
-  font-family: "Open-Sans", sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -39,13 +39,13 @@ img {
 }
 
 @font-face {
-  font-family: "Open Sans", "Arial", sans-serif;
+  font-family: "Open Sans";
   src: url("../fonts/opensans.woff2") format("woff2"), url("../fonts/opensans.woff") format("woff");
   font-weight: 400;
 }
 
 @font-face {
-  font-family: "Open Sans", "Arial", sans-serif;
+  font-family: "Open Sans";
   src: url("../fonts/opensansbold.woff2") format("woff2"), url("../fonts/opensansbold.woff") format("woff");
   font-weight: 700;
 }
